--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -2,24 +2,28 @@
 <html lang="en">
 <head>
   <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <title>Re-Api Movie</title>
+  <title>Re-Api</title>
 </head>
 <body>
   <!-- nav layout  -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-    <a class="navbar-brand" href="#">Re-API Movie</a>
+    <a class="navbar-brand" href="#">Re-API Movie Finder</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">Search Movie</a>
+            <a class="nav-item nav-link" href="/re-api/movie">Movie</a>
+            <a class="nav-item nav-link" href="/re-api/ip">Ip</a>
+            <a class="nav-item nav-link" href="/re-api/phonenumber">PhoneNumber</a>
+            <a class="nav-item nav-link" href="/re-api/email">Email</a>
         </div>
       </div>
     </div>
@@ -32,7 +36,7 @@
       <div class="col-md-8">
         <h1 class="text-center">Search Movie</h1>
         <div class="input-group mb-3">
-            <input type="text" id="search-input" class="form-control" placeholder="Movie title...">
+            <input type="text" id="search-input" class="form-control" placeholder="Movie title..." required>
             <div class="input-group-append">
               <button class="btn btn-dark" type="button" id="search-button">Search</button>
             </div>
@@ -76,7 +80,7 @@
   <script type="text/javascript" src="assets/js/jquery-3.4.1.min.js"></script>  
   <script src="assets/js/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/js/script.js"></script> 
+  <script src="assets/js/movie-script.js"></script> 
   </body>
 </html>
 
