--- a/views/subdomainFinder.ejs
+++ b/views/subdomainFinder.ejs
@@ -14,7 +14,7 @@
   <!-- nav layout  -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-    <a class="navbar-brand" href="/re-api/ip">Re-API Ip Finder</a>
+    <a class="navbar-brand" href="#">Re-API Sub-Domain Finder</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -28,41 +28,29 @@
       </div>
     </div>
   </nav>
-  
+ 
   <!-- layout form pencarian movie dan daftar movie hasil pencarian -->
   <div class="container">
     <!-- row form pencarian movie -->
     <div class="row mt-3 justify-content-center">
       <div class="col-md-8">
-        <h1 class="text-center">Search Ip Address</h1>
+        <h1 class="text-center">Subdomain Finder</h1>
         <div class="input-group mb-3">
-            <input type="text" id="search-input" class="form-control" placeholder="114.125.85.73" required>
+            <input type="text" id="search-input" class="form-control" placeholder="Domain or Ip address" required>
             <div class="input-group-append">
-              <button class="btn btn-dark" type="button" id="search-button">Find</button>
+              <button class="btn btn-dark" type="button" id="search-button">Lookup</button>
             </div>
           </div>
       </div>
     </div>
+    
     <hr class="bg-dark">
     <!-- row hasil pencarian movie -->
-    <div class="row" id="ip-info">
-      <div class="col-md-12 mb-5">
-        <table class="table table-hover" id="table">
-          <thead class="thead-dark">
-            <tr>
-              <th scope="col">No</th>
-              <th scope="col">Title</th>
-              <th scope="col">Info</th>
-            </tr>
-          </thead>
-          <tbody id="tbody">
-          </tbody>
-        </table>
-        <hr class="bg-dark">
-      </div>
+    <div class="row" id="subdomainfinder-info">
     </div>
   </div>
 
+ 
   <!-- layout copyright -->
   <div>
       <div class="footer bg-dark fixed-bottom text-white text-center">
@@ -73,21 +61,7 @@
   <script type="text/javascript" src="assets/js/jquery-3.4.1.min.js"></script>  
   <script src="assets/js/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/js/ip-script.js"></script>
-  <script>
-    $('#search-button').on('click', function(){
-      console.log('p');
-      if($('#tbody').val() === '') {
-        $('#tbody').html(`
-        <div class="spinner-border text-danger" role="status">
-          <span class="sr-only">Loading...</span>
-        </div>
-        `);
-      } 
-    });
-  
-
-  </script> 
+  <script src="assets/js/subdomainFinder-script.js"></script> 
   </body>
 </html>
 
