menambahkan fitur facabook(video) dan instagram(video dan gambar) downloader. membuat halaman 404 dan 500 lebih cantik. menunda fitur youtube downloader vider dan google map pada ip address finder geolocation. menambahkan fitur loading request ajax yang cukup user friendly(loading ajax request)

--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -7,10 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link href="assets/css/bootstrap-4-navbar.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/font-awesome-free-5.9.0/css/all.min.css">
-  
+  <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.min.css">
+  <link href="/public/assets/css/bootstrap-4-navbar.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/public/assets/font-awesome-free-5.9.0/css/all.min.css">
+  <link rel="shortcut icon" href="/public/assets/ico/Crountch-One-Piece-Jolly-Roger-Luffys-flag.ico">    
   <title>Re-Api</title>
 </head>
 <body>
@@ -47,6 +47,14 @@
                   <li><a class="dropdown-item" href="/re-api/reverse-ip-lookup">Reverse IP Lookup</a></li>
                 </ul>
               </li> 
+              <li>
+                <a class="dropdown-item dropdown-toggle" href="#">Re-Api Downloader</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/re-api/youtube-downloader">Youtube Downloader</a></li>
+                  <li><a class="dropdown-item" href="/re-api/facebook-downloader">Facebook Downloader</a></li>
+                  <li><a class="dropdown-item" href="/re-api/instagram-downloader">Instagram Downloader</a></li>
+                </ul>
+              </li>                
             </ul>
           </li>                           
           <li class="nav-item ">
@@ -75,6 +83,7 @@
               <button class="btn btn-dark" type="button" id="search-button">Search</button>
             </div>
           </div>
+          <p class="text-danger" id="errorMessage"></p>
       </div>
     </div>
 
@@ -112,11 +121,11 @@
       </div>
   </div>
   
-  <script type="text/javascript" src="assets/js/jquery-3.4.1.min.js"></script>  
-  <script src="assets/js/popper.min.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/js/movie-script.js"></script> 
-  <script src="assets/js/bootstrap-4-navbar.min.js"></script>
+  <script type="text/javascript" src="/public/assets/js/jquery-3.4.1.min.js"></script>  
+  <script src="/public/assets/js/popper.min.js"></script>
+  <script src="/public/assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/public/assets/js/movie-script.js"></script> 
+  <script src="/public/assets/js/bootstrap-4-navbar.min.js"></script>
 
   </body>
 </html>
