--- a/views/404.ejs
+++ b/views/404.ejs
@@ -7,14 +7,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link href="assets/css/bootstrap-4-navbar.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/font-awesome-free-5.9.0/css/all.min.css">
-  
+  <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.min.css">
+  <link href="/public/assets/css/bootstrap-4-navbar.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/public/assets/font-awesome-free-5.9.0/css/all.min.css">
+
+  <link rel="shortcut icon" href="/public/assets/ico/Crountch-One-Piece-Jolly-Roger-Luffys-flag.ico">  
   <title>Re-Api - 404 page not found</title>
 </head>
 <body>
-  <!-- nav layout  -->
   <!-- nav layout  -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav ">
     <div class="container"> 
@@ -48,6 +48,14 @@
                   <li><a class="dropdown-item" href="/re-api/reverse-ip-lookup">Reverse IP Lookup</a></li>
                 </ul>
               </li> 
+              <li>
+                <a class="dropdown-item dropdown-toggle" href="#">Re-Api Downloader</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/re-api/youtube-downloader">Youtube Downloader</a></li>
+                  <li><a class="dropdown-item" href="/re-api/facebook-downloader">Facebook Downloader</a></li>
+                  <li><a class="dropdown-item" href="/re-api/instagram-downloader">Instagram Downloader</a></li>
+                </ul>
+              </li>                
             </ul>
           </li>                           
           <li class="nav-item ">
@@ -64,10 +72,13 @@
     </div>
   </nav>
 
-  <!-- layout about -->
-  <div id="contact" style="margin-top: 110px;">
-    <p><center><h1 style="font-weight: bold;">404 PAGE NOT FOUND</h1></center></p>
+  <!--  layout jumbotron -->
+  <div class="jumbotron">
+    <div class="container"> 
+      <img src="/public/assets/img/Best-Coming-Soon-and-404-Error-Page-Templates-for-Your-Unique-Websites.jpg" style="height: 50%; width: 100%; ">
+    </div>
   </div>
+
 
   <!-- layout copyright -->
   <div>
@@ -76,11 +87,11 @@
       </div>
   </div>
   
-  <script type="text/javascript" src="assets/js/jquery-3.4.1.min.js"></script>  
-  <script src="assets/js/popper.min.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/js/ip-script.js"></script>
-  <script src="assets/js/bootstrap-4-navbar.min.js"></script>
+  <script type="text/javascript" src="/public/assets/js/jquery-3.4.1.min.js"></script>  
+  <script src="/public/assets/js/popper.min.js"></script>
+  <script src="/public/assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/public/assets/js/ip-script.js"></script>
+  <script src="/public/assets/js/bootstrap-4-navbar.min.js"></script>
 
   </body>
 </html>
