--- a/views/facebookDownloader.ejs
+++ b/views/facebookDownloader.ejs
@@ -7,17 +7,22 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Bootstrap CSS -->
+  <link rel="shortcut icon" href="/public/assets/ico/Crountch-One-Piece-Jolly-Roger-Luffys-flag.ico">  
   <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.min.css">
   <link href="/public/assets/css/bootstrap-4-navbar.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/public/assets/font-awesome-free-5.9.0/css/all.min.css">
-  <link rel="shortcut icon" href="/public/assets/ico/Crountch-One-Piece-Jolly-Roger-Luffys-flag.ico">    
+  <style>
+    .title{
+      font-size: 15px
+    }
+  </style>
   <title>Re-Api</title>
 </head>
 <body>
   <!-- nav layout  -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav ">
     <div class="container"> 
-      <a class="navbar-brand" href="#"> RE-API EMAIL FINDER</a>
+      <a class="navbar-brand" href="#"> RE-API FACEBOOK DOWNLOADER</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -46,7 +51,7 @@
                   <li><a class="dropdown-item" href="/re-api/dns-history-checker">DNS History Checker</a></li>
                   <li><a class="dropdown-item" href="/re-api/reverse-ip-lookup">Reverse IP Lookup</a></li>
                 </ul>
-              </li>
+              </li> 
               <li>
                 <a class="dropdown-item dropdown-toggle" href="#">Re-Api Downloader</a>
                 <ul class="dropdown-menu">
@@ -54,7 +59,7 @@
                   <li><a class="dropdown-item" href="/re-api/facebook-downloader">Facebook Downloader</a></li>
                   <li><a class="dropdown-item" href="/re-api/instagram-downloader">Instagram Downloader</a></li>
                 </ul>
-              </li>                               
+              </li>                 
             </ul>
           </li>                           
           <li class="nav-item ">
@@ -70,18 +75,17 @@
       </div>
     </div>
   </nav>
-
-
+  
   <!-- layout form pencarian movie dan daftar movie hasil pencarian -->
-  <div class="container" style="margin-top: 100px;">  
+  <div class="container" style="margin-top: 100px;">
     <!-- row form pencarian movie -->
     <div class="row mt-3 justify-content-center">
       <div class="col-md-8">
-        <h1 class="text-center">Search Email</h1>
+        <h1 class="text-center">Facebook Downloader</h1>
         <div class="input-group mb-3">
-            <input type="text" id="search-input" class="form-control" placeholder="example@email.com" required>
+            <input type="text" id="search-input" class="form-control" placeholder="Link here ..." required>
             <div class="input-group-append">
-              <button class="btn btn-dark" type="button" id="search-button">Find</button>
+              <button class="btn btn-dark" type="button" id="search-button">Go</button>
             </div>
           </div>
           <p class="text-danger" id="errorMessage"></p>
@@ -90,9 +94,8 @@
 
     <div id="hr"></div>
     <!-- row hasil pencarian movie -->
-    <div class="row" id="email-info"></div>
+    <div class="row" id="facebookdownloader-info"> </div>    
   </div>
-
 
   <!-- layout copyright -->
   <div>
@@ -104,7 +107,7 @@
   <script type="text/javascript" src="/public/assets/js/jquery-3.4.1.min.js"></script>  
   <script src="/public/assets/js/popper.min.js"></script>
   <script src="/public/assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="/public/assets/js/email-script.js"></script> 
+  <script src="/public/assets/js/facebookDownloader-script.js"></script> 
   <script src="/public/assets/js/bootstrap-4-navbar.min.js"></script>
 
   </body>
