--- a/views/ipInfoFinder.ejs
+++ b/views/ipInfoFinder.ejs
@@ -7,10 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link href="assets/css/bootstrap-4-navbar.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/font-awesome-free-5.9.0/css/all.min.css">
-  
+  <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.min.css">
+  <link href="/public/assets/css/bootstrap-4-navbar.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/public/assets/font-awesome-free-5.9.0/css/all.min.css">
+   <link rel="shortcut icon" href="/public/assets/ico/Crountch-One-Piece-Jolly-Roger-Luffys-flag.ico">   
   <title>Re-Api</title>
 </head>
 <body>
@@ -47,6 +47,14 @@
                   <li><a class="dropdown-item" href="/re-api/reverse-ip-lookup">Reverse IP Lookup</a></li>
                 </ul>
               </li> 
+              <li>
+                <a class="dropdown-item dropdown-toggle" href="#">Re-Api Downloader</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/re-api/youtube-downloader">Youtube Downloader</a></li>
+                  <li><a class="dropdown-item" href="/re-api/facebook-downloader">Facebook Downloader</a></li>
+                  <li><a class="dropdown-item" href="/re-api/instagram-downloader">Instagram Downloader</a></li>
+                </ul>
+              </li>                
             </ul>
           </li>                           
           <li class="nav-item ">
@@ -75,6 +83,7 @@
               <button class="btn btn-dark" type="button" id="search-button">Find</button>
             </div>
           </div>
+          <p class="text-danger" id="errorMessage"></p>
       </div>
     </div>
 
@@ -83,18 +92,34 @@
     <div class="row" id="ip-info"></div>
   </div>  
  
+<div class="modal fade" id="modalMapCity" role="dialog" arialabelledby="modalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Google Map
+      </div>
+      <div class="modal-body">
+        <img src="/public/assets/img/diy-website.png" alt="" style="width: 100%; height: 100%;">
+      </div>
+      <div class="modal-footer">
+        <button type="submit"class="btn btn-primary" data-dismiss="modal" aria-label="Close">Tutup</button>
+      </div>
+    </div>
+  </div>
+</div>
+
   <!-- layout copyright -->
   <div>
       <div class="footer bg-dark fixed-bottom text-white text-center">
         <p>Developed by r3ndyDinar Copyright <i class="far fa-copyright"></i> 2019</p>
       </div>
   </div>
-  
-  <script type="text/javascript" src="assets/js/jquery-3.4.1.min.js"></script>  
-  <script src="assets/js/popper.min.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/js/ip-script.js"></script>
-  <script src="assets/js/bootstrap-4-navbar.min.js"></script>
+
+  <script type="text/javascript" src="/public/assets/js/jquery-3.4.1.min.js"></script>  
+  <script src="/public/assets/js/popper.min.js"></script>
+  <script src="/public/assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/public/assets/js/ip-script.js"></script>
+  <script src="/public/assets/js/bootstrap-4-navbar.min.js"></script>
 
   </body>
 </html>
